--- a/voxel-tools/write_json.ipynb
+++ b/voxel-tools/write_json.ipynb
@@ -19,9 +19,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '../../datasets/shapenet/02843684/1b73f96cf598ef492cba66dc6aeabcd4/models/model_normalized.surface.binvox'\n",
+    "# filepath = '../../datasets/shapenet/02843684/1b73f96cf598ef492cba66dc6aeabcd4/models/model_normalized.surface.binvox'\n",
     "\n",
-    "# filepath = '../../datasets/shapenet/04099429/1ada292665f218a8789f2aa296a418cc/models/model_normalized.surface.binvox'"
+    "filepath = '../../datasets/shapenet/04099429/1ada292665f218a8789f2aa296a418cc/models/model_normalized.surface.binvox'"
    ]
   },
   {
@@ -33,7 +33,7 @@
     "default_scale_filename = \"shapenet_scale_01.json\"\n",
     "new_scale_filename = \"shapenet_scale_03.json\"\n",
     "\n",
-    "scale_down_factor = 3"
+    "scale_down_factor = 4"
    ]
   },
   {
